--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,32 @@
     <string name="state_current_version">当前版本：v1.0</string>
     <string name="title_activity_modify">修改密码</string>
     <string name="welcome">立即体验</string>
+    <string name="action_sign_in">登录</string>
+    <string name="action_sign_up">注册</string>
+    <string name="search">搜索</string>
+    <string name="more">更多</string>
+    <string name="about">关于</string>
+    <string name="exit">退出</string>
+
+
+    <!-- Strings related to personal center-->
+    <string name="hint_work">职业</string>
+    <string name="hint_location">现居</string>
+    <string name="hint_birth">生日</string>
+    <string name="hint_sex">性别</string>
+    <string name="hint_sign">个性签名</string>
+    <string name="hint_avatar">头像</string>
+    <string name="hint_nickname">昵称</string>
+
+    <!-- Strings related to publish-->
+    <string name="hint_publish">分享新鲜事</string>
+
+    <!-- Strings related to search user-->
+    <string name="hint_search_content">输入用户名、邮箱或用户ID进行搜索</string>
+
+    <!-- Strings related to login -->
+    <string name="hint_email">邮箱</string>
+    <string name="hint_password">密码</string>
+    <string name="hint_confirm_password">确认密码</string>
+    <string name="hint_username">用户名</string>
 </resources>
